<resources>
    <string name="app_name" translatable="false">LabNex</string>
    <string name="version_display" translatable="false">LabNex %1$s | GitLab %2$s</string>
    <string name="support_link_patreon" translatable="false">https://www.patreon.com/mmarif</string>
    <string name="crowd_in_link" translatable="false">https://crowdin.com/project/labnex</string>
    <string name="app_website_link" translatable="false">https://labnex.app</string>
    <string name="source_code_link" translatable="false">https://github.com/labnex/LabNex</string>
    <string name="support_text_patreon" translatable="false">Patreon</string>
    <string name="crowd_in_text" translatable="false">Crowdin</string>
    <string name="gitnex" translatable="false">GitNex</string>
    <string name="gitnex_link" translatable="false">https://gitnex.com</string>
    <string name="oceannex" translatable="false">OceanNex</string>
    <string name="oceannex_link" translatable="false">https://oceannex.swatian.com</string>
    <string name="nexnode" translatable="false">NexNode</string>
    <string name="nexnode_link" translatable="false">https://nexnode.swatian.com</string>
    <string name="gitlab" translatable="false">GitLab</string>
    <string name="private_placeholder" translatable="false">Private</string>
    <string name="internal_placeholder" translatable="false">Internal</string>
    <string name="public_placeholder" translatable="false">Public</string>
    <string name="gitlab_saas" translatable="false">GitLab SaaS</string>
    <string name="data_concatenate" translatable="false">%1$s - %2$s</string>
    <string name="single_string_conversion" translatable="false">%1$s</string>
    <string name="username_with_domain" translatable="false">%1$s | %2$s</string>
    <string name="hash" translatable="false">#</string>
    <string name="username_with_at_sign" translatable="false">\@%1$s</string>
    <string name="source_position" translatable="false">%1$d:%2$d</string>
    <string name="discord_user_profile_link" translatable="false">https://discord.com/users/%1$s</string>
    <string name="personal_access_token_helper_link" translatable="false">https://gitlab.com/-/user_settings/personal_access_tokens</string>
    <string name="visibility_internal" translatable="false">Internal</string>
    <string name="visibility_private" translatable="false">Private</string>
    <string name="visibility_public" translatable="false">Public</string>
    <string name="dark" translatable="false">Dark</string>
    <string name="light" translatable="false">Light</string>
    <string name="dynamic" translatable="false">Dynamic</string>
    <string name="theme_system" translatable="false">System</string>
    <string name="where_to_get_token_message" translatable="false"><![CDATA[• Log in to your account on your instance (GitLab, framagit, etc.).<br>• Click on your user profile picture, then go to Preferences.<br>• In the left side menu, click on Personal access tokens.<br>• Click on Add new token button.<br>• Enter token name and choose expiration date as long as possible.<br>• Check all the scopes.<br><br>Once created, copy and paste or type the token in Personal access token input field.]]></string>
    <string name="number_label" translatable="false">12</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="main" translatable="false">main</string>
    <string name="cursor_position_format" translatable="false">Ln %d, Col %d</string>
    <string name="separator_dot" translatable="false">●</string>
    <string name="readme" translatable="false">Readme</string>
    <string name="tag_info" translatable="false">%1$s • %2$s</string>
    <string name="issue_number" translatable="false">#%d</string>
    <string name="mr_number" translatable="false">!%d</string>
    <string name="action_sign_in">Sign in</string>
    <string name="hi_username">Hi %1$s</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_failed">Login failed</string>
    <string name="all_good">You\'re all caught up</string>
    <string name="most_visited">Most visited projects</string>
    <string name="gitlab_link">GitLab URL</string>
    <string name="gitlab_link_help">i.e., gitlab.com (do not add https, http is not supported by LabNex)</string>
    <string name="personal_access_token">Personal access token</string>
    <string name="personal_access_token_helper"><u>Where can I get a personal access token?</u></string>
    <string name="add_new_account">Add account</string>
    <string name="remove_all_accounts">Remove all accounts</string>
    <string name="remove_all_accounts_from_app_message">This will remove all the accounts from the app only, including projects data, personal notes, etc.</string>
    <string name="account_token_expires_at">Token expires on %1$s</string>
    <string name="remove_account_from_app_title">Remove account</string>
    <string name="remove_account_from_app_message">Are you sure you want to remove this account from the app?\n\nThis will remove all data related to this account on the app only.</string>
    <string name="remove_account_from_app_success">Account removed successfully</string>
    <string name="api_scopes">Scopes: all api scopes are required</string>
    <string name="gitlab_version">GitLab version</string>
    <string name="theme_selector_dialog_title">Select app theme</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_language_selector_dialog_title">Choose language</string>
    <string name="settings_biometric_header">Biometric lock</string>
    <string name="biometric_auth_title">Biometric authentication</string>
    <string name="biometric_auth_sub_title">Unlock using your biometric credentials</string>
    <string name="biometric_not_supported">No biometric features available on this device</string>
    <string name="biometric_not_available">Biometric features are currently unavailable</string>
    <string name="enroll_biometric">Enroll biometric from phone settings</string>
    <string name="nothing_found">There is no data to display at the moment.</string>
    <string name="created_with">Created %1$s</string>
    <string name="updated_with">Updated %1$s</string>
    <plurals name="note_delete_message">
        <item quantity="one">Note deleted successfully</item>
        <item quantity="other">Notes deleted successfully</item>
    </plurals>
    <string name="delete_note_dialog_message">Do you really want to delete this note?</string>
    <string name="delete_all_notes_dialog_message">This will delete all of your notes. This action cannot be undone.</string>
    <string name="new_note_content_hint">Start taking your notes here</string>
    <string name="group_name">Group name</string>
    <string name="gitlab_saas_message">It looks like you are using GitLab SaaS (gitlab.com). Currently, the SaaS version does not support this feature.</string>
    <string name="gitlab_saas_message_extra">On GitLab SaaS, you must use the GitLab UI to create groups without a parent group.</string>
    <string name="group_created">New group created</string>
    <string name="starred_projects">Starred projects</string>
    <string name="archived_project">This is an archived project. Repository and other project resources are read-only.</string>
    <string name="project_starred">The project has been starred successfully</string>
    <string name="project_unstarred">The project has been unstarred successfully</string>
    <string name="switch_branch">Switch branch</string>
    <string name="create_new_label">Create label</string>
    <string name="label_color">Background color</string>
    <string name="label_title_empty">Label name is required</string>
    <string name="label_created">Label created successfully</string>
    <string name="new_label">New label</string>
    <string name="edit_label">Edit label</string>
    <string name="delete_dialog_title">Delete %1$s?</string>
    <string name="delete_label_dialog_message">Do you really want to delete this label?</string>
    <string name="label_deleted">Label deleted successfully</string>
    <string name="label_updated">Label updated successfully</string>
    <string name="add_new_member">Add new member</string>
    <string name="copy_url_message">URL has been copied to the clipboard</string>
    <string name="copy_project_id">Copy project ID</string>
    <string name="copy_web_url">Copy project URL</string>
    <string name="copy_clone_https_url">Copy HTTPS clone URL</string>
    <string name="copy_ssh_url">Copy SSH URL</string>
    <string name="new_page">New page</string>
    <string name="delete_wiki_dialog_message">Do you really want to delete this wiki page?</string>
    <string name="wiki_content_hint">Content (Markdown)</string>
    <string name="wiki_page_created">Wiki page created successfully</string>
    <string name="wiki_page_updated">Wiki page updated successfully</string>
    <string name="title_required">Title is required</string>
    <string name="content_required">Content is required</string>
    <string name="wiki_page_deleted">Wiki page deleted successfully</string>
    <string name="published_by">Published by %1$s %2$s</string>
    <string name="release_deleted">Release deleted successfully</string>
    <string name="delete_release_message">Are you sure you want to delete this release? Deleting a release does not delete the associated tag.</string>
    <string name="due_on">Due on %1$s</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="notes_and_activities">Notes and Activities</string>
    <string name="discussion_locked">Discussion locked</string>
    <string name="discussion_locked_message">The discussion is locked. Only project members can comment.</string>
    <string name="comment_posted">Comment posted</string>
    <string name="comment_is_empty">Did you forget to write something?</string>
    <string name="create_issue">Create issue</string>
    <string name="issue_created">Issue created successfully</string>
    <string name="initialize_with_readme">Initialize repository with a README</string>
    <string name="create_project">Create project</string>
    <string name="project_visibility">Project visibility</string>
    <string name="merge_requests">Merge requests</string>
    <string name="render_md">Render Markdown</string>
    <string name="todo_action_marked">Marked</string>
    <string name="todo_action_mentioned">Mentioned</string>
    <string name="todo_action_build_failed">Build failed</string>
    <string name="todo_action_approval_required">Approval required</string>
    <string name="scope_assigned_to_me">Assigned to me</string>
    <string name="mark_all_as_done">Mark all as done</string>
    <string name="home">Home</string>
    <string name="activities">Activities</string>
    <string name="explore">Explore</string>
    <string name="issues">Issues</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="close">Close</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="labels">Labels</string>
    <string name="milestones">Milestones</string>
    <string name="wiki">Wiki</string>
    <string name="commits">Commits</string>
    <string name="members">Members</string>
    <string name="open">Open</string>
    <string name="merge">Merge</string>
    <string name="download">Download</string>
    <string name="closed">Closed</string>
    <string name="merged">Merged</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="state">State</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="type">Type</string>
    <string name="pending">Pending</string>
    <string name="action">Action</string>
</resources>