<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:contentDescription="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        android:contentDescription="@string/download"
        app:showAsAction="always" />

    <item
        android:id="@+id/render_md"
        android:icon="@drawable/ic_markdown"
        android:title="@string/render_md"
        android:contentDescription="@string/render_md"
        app:showAsAction="ifRoom" />

</menu>