<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_circle_check"
        android:title="@string/close"
        android:contentDescription="@string/close"
        app:showAsAction="always" />

    <item
        android:id="@+id/url_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_url"
        android:contentDescription="@string/copy_url"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_in_browser"
        android:icon="@drawable/ic_browser"
        android:title="@string/open_in_browser"
        android:contentDescription="@string/open_in_browser"
        app:showAsAction="ifRoom" />

</menu>