<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.labnex.app.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.labnex.app.fragments.ActivitiesFragment"
        android:label="@string/activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.labnex.app.fragments.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" />

</navigation>